# Copyright 2020 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load(
    "//pw_build:pigweed.bzl",
    "pw_cc_library",
)

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

pw_cc_library(
    name = "pw_assert_log",
    srcs = [
        "assert_log.cc",
    ],
    hdrs = [
        "public/pw_assert_log/assert_log.h",
        "public_overrides/pw_assert_backend/assert_backend.h",
    ],
    includes = [
        "public",
        "public_overrides",
    ],
    deps = [
        "//pw_assert:facade",
        "//pw_log",
        "//pw_preprocessor",
    ],
)

pw_cc_library(
    name = "lite_backend",
    hdrs = [
        "assert_lite_public_overrides/pw_assert_backend/assert_lite_backend.h",
        "public/pw_assert_log/assert_lite_log.h",
    ],
    includes = [
        "assert_lite_public_overrides",
        "public",
    ],
    deps = [
        "//pw_preprocessor",
    ],
)
