# Copyright 2022 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

# Note: to avoid circular dependencies, this target only includes the headers
# for pw_assert_tokenized. The source file and its dependencies are in the separate
# ":impl" target.
#
# If you point the @pigweed//pw_assert:backend to //pw_assert_tokenized, then
# @pigweed//pw_assert:backend_impl should point to //pw_assert_tokenized:impl.
cc_library(
    name = "pw_assert_tokenized",
    hdrs = [
        "assert_public_overrides/pw_assert_backend/assert_backend.h",
        "check_public_overrides/pw_assert_backend/check_backend.h",
        "public/pw_assert_tokenized/assert_tokenized.h",
        "public/pw_assert_tokenized/check_tokenized.h",
    ],
    includes = [
        "assert_public_overrides",
        "check_public_overrides",
        "public",
    ],
    deps = [
        ":handler",
        "//pw_assert:facade",
        "//pw_log_tokenized",
        "//pw_preprocessor",
        "//pw_tokenizer",
    ],
)

cc_library(
    name = "handler",
    hdrs = [
        "public/pw_assert_tokenized/handler.h",
    ],
    includes = ["public"],
    deps = [
        "//pw_preprocessor",
    ],
)

cc_library(
    name = "impl",
    srcs = [
        "log_handler.cc",
    ],
    deps = [
        ":handler",
        "//pw_base64",
        "//pw_bytes",
        "//pw_log",
        "//pw_log_tokenized",
        "//pw_span",
    ],
    alwayslink = 1,
)
